[css] fixing small spacing errors

--- a/assets/css/templates/_insert-readmore.scss
+++ b/assets/css/templates/_insert-readmore.scss
@@ -10,7 +10,7 @@
 .insert-readmore {
     background-color: var(--color-beige-light);
     z-index: 1;
-    height: calc(var(--insert-readmore-lineheight) * 5);
+    height: calc(var(--insert-readmore-lineheight) * 4.4);
     overflow: hidden;
 }
 
