--- a/assets/css/templates/_insert-slide.scss
+++ b/assets/css/templates/_insert-slide.scss
@@ -107,3 +107,9 @@
         grid-column: span 1;
      }
 }
+
+@media screen and (min-width: 1440px) {
+  .grid__item--image__insertSlide img {
+    height: 40vw;
+  }
+}
